cmake_minimum_required(VERSION 3.1)
project(volcengine-cpp-sdk-ecs)

set(CMAKE_CXX_STANDARD 11)


set(VOLCENGINE_SDK_ECS_HEADER
    include/volcengine/ecs/EcsClient.h
)

set(VOLCENGINE_SDK_ECS_HEADER_MODEL
                include/volcengine/ecs/model/AccountForDescribeImageSharePermissionOutput.h
                include/volcengine/ecs/model/AssociateInstancesIamRoleRequest.h
                include/volcengine/ecs/model/AssociateInstancesIamRoleResult.h
                include/volcengine/ecs/model/AttachKeyPairRequest.h
                include/volcengine/ecs/model/AttachKeyPairResult.h
                include/volcengine/ecs/model/AvailableResourceForDescribeAvailableResourceOutput.h
                include/volcengine/ecs/model/AvailableSpotResourceForDescribeSpotAdviceOutput.h
                include/volcengine/ecs/model/AvailableZoneForDescribeAvailableResourceOutput.h
                include/volcengine/ecs/model/CapacityForDescribeDeploymentSetsOutput.h
                include/volcengine/ecs/model/CopyImageRequest.h
                include/volcengine/ecs/model/CopyImageResult.h
                include/volcengine/ecs/model/CpuOptionsForDescribeInstancesOutput.h
                include/volcengine/ecs/model/CreateDeploymentSetRequest.h
                include/volcengine/ecs/model/CreateDeploymentSetResult.h
                include/volcengine/ecs/model/CreateImageRequest.h
                include/volcengine/ecs/model/CreateImageResult.h
                include/volcengine/ecs/model/CreateKeyPairRequest.h
                include/volcengine/ecs/model/CreateKeyPairResult.h
                include/volcengine/ecs/model/CreateSubscriptionRequest.h
                include/volcengine/ecs/model/CreateSubscriptionResult.h
                include/volcengine/ecs/model/CreateTagsRequest.h
                include/volcengine/ecs/model/CreateTagsResult.h
                include/volcengine/ecs/model/DeleteDeploymentSetRequest.h
                include/volcengine/ecs/model/DeleteDeploymentSetResult.h
                include/volcengine/ecs/model/DeleteImagesRequest.h
                include/volcengine/ecs/model/DeleteImagesResult.h
                include/volcengine/ecs/model/DeleteInstanceRequest.h
                include/volcengine/ecs/model/DeleteInstanceResult.h
                include/volcengine/ecs/model/DeleteInstancesRequest.h
                include/volcengine/ecs/model/DeleteInstancesResult.h
                include/volcengine/ecs/model/DeleteKeyPairsRequest.h
                include/volcengine/ecs/model/DeleteKeyPairsResult.h
                include/volcengine/ecs/model/DeleteTagsRequest.h
                include/volcengine/ecs/model/DeleteTagsResult.h
                include/volcengine/ecs/model/DeploymentSetForDescribeDeploymentSetsOutput.h
                include/volcengine/ecs/model/DescribeAvailableResourceRequest.h
                include/volcengine/ecs/model/DescribeAvailableResourceResult.h
                include/volcengine/ecs/model/DescribeDeploymentSetSupportedInstanceTypeFamilyRequest.h
                include/volcengine/ecs/model/DescribeDeploymentSetSupportedInstanceTypeFamilyResult.h
                include/volcengine/ecs/model/DescribeDeploymentSetsRequest.h
                include/volcengine/ecs/model/DescribeDeploymentSetsResult.h
                include/volcengine/ecs/model/DescribeEventTypesRequest.h
                include/volcengine/ecs/model/DescribeEventTypesResult.h
                include/volcengine/ecs/model/DescribeImageSharePermissionRequest.h
                include/volcengine/ecs/model/DescribeImageSharePermissionResult.h
                include/volcengine/ecs/model/DescribeImagesRequest.h
                include/volcengine/ecs/model/DescribeImagesResult.h
                include/volcengine/ecs/model/DescribeInstanceECSTerminalUrlRequest.h
                include/volcengine/ecs/model/DescribeInstanceECSTerminalUrlResult.h
                include/volcengine/ecs/model/DescribeInstanceTypeFamiliesRequest.h
                include/volcengine/ecs/model/DescribeInstanceTypeFamiliesResult.h
                include/volcengine/ecs/model/DescribeInstanceTypesRequest.h
                include/volcengine/ecs/model/DescribeInstanceTypesResult.h
                include/volcengine/ecs/model/DescribeInstanceVncUrlRequest.h
                include/volcengine/ecs/model/DescribeInstanceVncUrlResult.h
                include/volcengine/ecs/model/DescribeInstancesIamRolesRequest.h
                include/volcengine/ecs/model/DescribeInstancesIamRolesResult.h
                include/volcengine/ecs/model/DescribeInstancesRequest.h
                include/volcengine/ecs/model/DescribeInstancesResult.h
                include/volcengine/ecs/model/DescribeKeyPairsRequest.h
                include/volcengine/ecs/model/DescribeKeyPairsResult.h
                include/volcengine/ecs/model/DescribeSpotAdviceRequest.h
                include/volcengine/ecs/model/DescribeSpotAdviceResult.h
                include/volcengine/ecs/model/DescribeSubscriptionsRequest.h
                include/volcengine/ecs/model/DescribeSubscriptionsResult.h
                include/volcengine/ecs/model/DescribeSystemEventsRequest.h
                include/volcengine/ecs/model/DescribeSystemEventsResult.h
                include/volcengine/ecs/model/DescribeTagsRequest.h
                include/volcengine/ecs/model/DescribeTagsResult.h
                include/volcengine/ecs/model/DescribeTasksRequest.h
                include/volcengine/ecs/model/DescribeTasksResult.h
                include/volcengine/ecs/model/DescribeUserDataRequest.h
                include/volcengine/ecs/model/DescribeUserDataResult.h
                include/volcengine/ecs/model/DescribeZonesRequest.h
                include/volcengine/ecs/model/DescribeZonesResult.h
                include/volcengine/ecs/model/DetachKeyPairRequest.h
                include/volcengine/ecs/model/DetachKeyPairResult.h
                include/volcengine/ecs/model/DisassociateInstancesIamRoleRequest.h
                include/volcengine/ecs/model/DisassociateInstancesIamRoleResult.h
                include/volcengine/ecs/model/EipAddressForDescribeInstancesOutput.h
                include/volcengine/ecs/model/ErrorForAssociateInstancesIamRoleOutput.h
                include/volcengine/ecs/model/ErrorForAttachKeyPairOutput.h
                include/volcengine/ecs/model/ErrorForCreateTagsOutput.h
                include/volcengine/ecs/model/ErrorForDeleteImagesOutput.h
                include/volcengine/ecs/model/ErrorForDeleteInstancesOutput.h
                include/volcengine/ecs/model/ErrorForDeleteKeyPairsOutput.h
                include/volcengine/ecs/model/ErrorForDeleteTagsOutput.h
                include/volcengine/ecs/model/ErrorForDetachKeyPairOutput.h
                include/volcengine/ecs/model/ErrorForDisassociateInstancesIamRoleOutput.h
                include/volcengine/ecs/model/ErrorForRebootInstancesOutput.h
                include/volcengine/ecs/model/ErrorForStartInstancesOutput.h
                include/volcengine/ecs/model/ErrorForStopInstancesOutput.h
                include/volcengine/ecs/model/ErrorForUpdateSystemEventsOutput.h
                include/volcengine/ecs/model/EventTypeForDescribeEventTypesOutput.h
                include/volcengine/ecs/model/ExportImageRequest.h
                include/volcengine/ecs/model/ExportImageResult.h
                include/volcengine/ecs/model/GetConsoleOutputRequest.h
                include/volcengine/ecs/model/GetConsoleOutputResult.h
                include/volcengine/ecs/model/GetConsoleScreenshotRequest.h
                include/volcengine/ecs/model/GetConsoleScreenshotResult.h
                include/volcengine/ecs/model/GpuDeviceForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/GpuForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/GpuForDescribeSpotAdviceInput.h
                include/volcengine/ecs/model/ImageForDescribeImagesOutput.h
                include/volcengine/ecs/model/ImportImageRequest.h
                include/volcengine/ecs/model/ImportImageResult.h
                include/volcengine/ecs/model/ImportKeyPairRequest.h
                include/volcengine/ecs/model/ImportKeyPairResult.h
                include/volcengine/ecs/model/InstanceForDescribeInstancesOutput.h
                include/volcengine/ecs/model/InstanceTypeFamilyForDescribeInstanceTypeFamiliesOutput.h
                include/volcengine/ecs/model/InstanceTypeForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/InstancesIamRoleForDescribeInstancesIamRolesOutput.h
                include/volcengine/ecs/model/KeyPairForDescribeKeyPairsOutput.h
                include/volcengine/ecs/model/LocalVolumeForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/LocalVolumeForDescribeInstancesOutput.h
                include/volcengine/ecs/model/MemoryForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/ModifyDeploymentSetAttributeRequest.h
                include/volcengine/ecs/model/ModifyDeploymentSetAttributeResult.h
                include/volcengine/ecs/model/ModifyImageAttributeRequest.h
                include/volcengine/ecs/model/ModifyImageAttributeResult.h
                include/volcengine/ecs/model/ModifyImageSharePermissionRequest.h
                include/volcengine/ecs/model/ModifyImageSharePermissionResult.h
                include/volcengine/ecs/model/ModifyInstanceAttributeRequest.h
                include/volcengine/ecs/model/ModifyInstanceAttributeResult.h
                include/volcengine/ecs/model/ModifyInstanceChargeTypeRequest.h
                include/volcengine/ecs/model/ModifyInstanceChargeTypeResult.h
                include/volcengine/ecs/model/ModifyInstanceDeploymentRequest.h
                include/volcengine/ecs/model/ModifyInstanceDeploymentResult.h
                include/volcengine/ecs/model/ModifyInstanceSpecRequest.h
                include/volcengine/ecs/model/ModifyInstanceSpecResult.h
                include/volcengine/ecs/model/ModifyKeyPairAttributeRequest.h
                include/volcengine/ecs/model/ModifyKeyPairAttributeResult.h
                include/volcengine/ecs/model/ModifySubscriptionEventTypesRequest.h
                include/volcengine/ecs/model/ModifySubscriptionEventTypesResult.h
                include/volcengine/ecs/model/NetworkForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/NetworkInterfaceForDescribeInstancesOutput.h
                include/volcengine/ecs/model/NetworkInterfaceForRunInstancesInput.h
                include/volcengine/ecs/model/OperationDetailForAssociateInstancesIamRoleOutput.h
                include/volcengine/ecs/model/OperationDetailForAttachKeyPairOutput.h
                include/volcengine/ecs/model/OperationDetailForCreateTagsOutput.h
                include/volcengine/ecs/model/OperationDetailForDeleteImagesOutput.h
                include/volcengine/ecs/model/OperationDetailForDeleteInstancesOutput.h
                include/volcengine/ecs/model/OperationDetailForDeleteKeyPairsOutput.h
                include/volcengine/ecs/model/OperationDetailForDeleteTagsOutput.h
                include/volcengine/ecs/model/OperationDetailForDetachKeyPairOutput.h
                include/volcengine/ecs/model/OperationDetailForDisassociateInstancesIamRoleOutput.h
                include/volcengine/ecs/model/OperationDetailForRebootInstancesOutput.h
                include/volcengine/ecs/model/OperationDetailForStartInstancesOutput.h
                include/volcengine/ecs/model/OperationDetailForStopInstancesOutput.h
                include/volcengine/ecs/model/OperationDetailForUpdateSystemEventsOutput.h
                include/volcengine/ecs/model/ProcessorForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/RdmaForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/RebootInstanceRequest.h
                include/volcengine/ecs/model/RebootInstanceResult.h
                include/volcengine/ecs/model/RebootInstancesRequest.h
                include/volcengine/ecs/model/RebootInstancesResult.h
                include/volcengine/ecs/model/RenewInstanceRequest.h
                include/volcengine/ecs/model/RenewInstanceResult.h
                include/volcengine/ecs/model/ReplaceSystemVolumeRequest.h
                include/volcengine/ecs/model/ReplaceSystemVolumeResult.h
                include/volcengine/ecs/model/RunInstancesRequest.h
                include/volcengine/ecs/model/RunInstancesResult.h
                include/volcengine/ecs/model/StartInstanceRequest.h
                include/volcengine/ecs/model/StartInstanceResult.h
                include/volcengine/ecs/model/StartInstancesRequest.h
                include/volcengine/ecs/model/StartInstancesResult.h
                include/volcengine/ecs/model/StopInstanceRequest.h
                include/volcengine/ecs/model/StopInstanceResult.h
                include/volcengine/ecs/model/StopInstancesRequest.h
                include/volcengine/ecs/model/StopInstancesResult.h
                include/volcengine/ecs/model/SubscriptionForDescribeSubscriptionsOutput.h
                include/volcengine/ecs/model/SupportedResourceForDescribeAvailableResourceOutput.h
                include/volcengine/ecs/model/SystemEventForDescribeSystemEventsOutput.h
                include/volcengine/ecs/model/TagFilterForDescribeImagesInput.h
                include/volcengine/ecs/model/TagFilterForDescribeInstancesInput.h
                include/volcengine/ecs/model/TagFilterForDescribeTagsInput.h
                include/volcengine/ecs/model/TagForCreateImageInput.h
                include/volcengine/ecs/model/TagForCreateTagsInput.h
                include/volcengine/ecs/model/TagForDescribeImagesOutput.h
                include/volcengine/ecs/model/TagForDescribeInstancesOutput.h
                include/volcengine/ecs/model/TagForImportImageInput.h
                include/volcengine/ecs/model/TagForRunInstancesInput.h
                include/volcengine/ecs/model/TagResourceForDescribeTagsOutput.h
                include/volcengine/ecs/model/TaskForDescribeTasksOutput.h
                include/volcengine/ecs/model/UpdateSystemEventsRequest.h
                include/volcengine/ecs/model/UpdateSystemEventsResult.h
                include/volcengine/ecs/model/VolumeForDescribeInstanceTypesOutput.h
                include/volcengine/ecs/model/VolumeForRunInstancesInput.h
                include/volcengine/ecs/model/ZoneForDescribeZonesOutput.h
    )

set(VOLCENGINE_SDK_ECS_LIB
    src/EcsClient.cpp
    src/model/ecs/AccountForDescribeImageSharePermissionOutput.cpp
    src/model/ecs/AssociateInstancesIamRoleRequest.cpp
    src/model/ecs/AssociateInstancesIamRoleResult.cpp
    src/model/ecs/AttachKeyPairRequest.cpp
    src/model/ecs/AttachKeyPairResult.cpp
    src/model/ecs/AvailableResourceForDescribeAvailableResourceOutput.cpp
    src/model/ecs/AvailableSpotResourceForDescribeSpotAdviceOutput.cpp
    src/model/ecs/AvailableZoneForDescribeAvailableResourceOutput.cpp
    src/model/ecs/CapacityForDescribeDeploymentSetsOutput.cpp
    src/model/ecs/CopyImageRequest.cpp
    src/model/ecs/CopyImageResult.cpp
    src/model/ecs/CpuOptionsForDescribeInstancesOutput.cpp
    src/model/ecs/CreateDeploymentSetRequest.cpp
    src/model/ecs/CreateDeploymentSetResult.cpp
    src/model/ecs/CreateImageRequest.cpp
    src/model/ecs/CreateImageResult.cpp
    src/model/ecs/CreateKeyPairRequest.cpp
    src/model/ecs/CreateKeyPairResult.cpp
    src/model/ecs/CreateSubscriptionRequest.cpp
    src/model/ecs/CreateSubscriptionResult.cpp
    src/model/ecs/CreateTagsRequest.cpp
    src/model/ecs/CreateTagsResult.cpp
    src/model/ecs/DeleteDeploymentSetRequest.cpp
    src/model/ecs/DeleteDeploymentSetResult.cpp
    src/model/ecs/DeleteImagesRequest.cpp
    src/model/ecs/DeleteImagesResult.cpp
    src/model/ecs/DeleteInstanceRequest.cpp
    src/model/ecs/DeleteInstanceResult.cpp
    src/model/ecs/DeleteInstancesRequest.cpp
    src/model/ecs/DeleteInstancesResult.cpp
    src/model/ecs/DeleteKeyPairsRequest.cpp
    src/model/ecs/DeleteKeyPairsResult.cpp
    src/model/ecs/DeleteTagsRequest.cpp
    src/model/ecs/DeleteTagsResult.cpp
    src/model/ecs/DeploymentSetForDescribeDeploymentSetsOutput.cpp
    src/model/ecs/DescribeAvailableResourceRequest.cpp
    src/model/ecs/DescribeAvailableResourceResult.cpp
    src/model/ecs/DescribeDeploymentSetSupportedInstanceTypeFamilyRequest.cpp
    src/model/ecs/DescribeDeploymentSetSupportedInstanceTypeFamilyResult.cpp
    src/model/ecs/DescribeDeploymentSetsRequest.cpp
    src/model/ecs/DescribeDeploymentSetsResult.cpp
    src/model/ecs/DescribeEventTypesRequest.cpp
    src/model/ecs/DescribeEventTypesResult.cpp
    src/model/ecs/DescribeImageSharePermissionRequest.cpp
    src/model/ecs/DescribeImageSharePermissionResult.cpp
    src/model/ecs/DescribeImagesRequest.cpp
    src/model/ecs/DescribeImagesResult.cpp
    src/model/ecs/DescribeInstanceECSTerminalUrlRequest.cpp
    src/model/ecs/DescribeInstanceECSTerminalUrlResult.cpp
    src/model/ecs/DescribeInstanceTypeFamiliesRequest.cpp
    src/model/ecs/DescribeInstanceTypeFamiliesResult.cpp
    src/model/ecs/DescribeInstanceTypesRequest.cpp
    src/model/ecs/DescribeInstanceTypesResult.cpp
    src/model/ecs/DescribeInstanceVncUrlRequest.cpp
    src/model/ecs/DescribeInstanceVncUrlResult.cpp
    src/model/ecs/DescribeInstancesIamRolesRequest.cpp
    src/model/ecs/DescribeInstancesIamRolesResult.cpp
    src/model/ecs/DescribeInstancesRequest.cpp
    src/model/ecs/DescribeInstancesResult.cpp
    src/model/ecs/DescribeKeyPairsRequest.cpp
    src/model/ecs/DescribeKeyPairsResult.cpp
    src/model/ecs/DescribeSpotAdviceRequest.cpp
    src/model/ecs/DescribeSpotAdviceResult.cpp
    src/model/ecs/DescribeSubscriptionsRequest.cpp
    src/model/ecs/DescribeSubscriptionsResult.cpp
    src/model/ecs/DescribeSystemEventsRequest.cpp
    src/model/ecs/DescribeSystemEventsResult.cpp
    src/model/ecs/DescribeTagsRequest.cpp
    src/model/ecs/DescribeTagsResult.cpp
    src/model/ecs/DescribeTasksRequest.cpp
    src/model/ecs/DescribeTasksResult.cpp
    src/model/ecs/DescribeUserDataRequest.cpp
    src/model/ecs/DescribeUserDataResult.cpp
    src/model/ecs/DescribeZonesRequest.cpp
    src/model/ecs/DescribeZonesResult.cpp
    src/model/ecs/DetachKeyPairRequest.cpp
    src/model/ecs/DetachKeyPairResult.cpp
    src/model/ecs/DisassociateInstancesIamRoleRequest.cpp
    src/model/ecs/DisassociateInstancesIamRoleResult.cpp
    src/model/ecs/EipAddressForDescribeInstancesOutput.cpp
    src/model/ecs/ErrorForAssociateInstancesIamRoleOutput.cpp
    src/model/ecs/ErrorForAttachKeyPairOutput.cpp
    src/model/ecs/ErrorForCreateTagsOutput.cpp
    src/model/ecs/ErrorForDeleteImagesOutput.cpp
    src/model/ecs/ErrorForDeleteInstancesOutput.cpp
    src/model/ecs/ErrorForDeleteKeyPairsOutput.cpp
    src/model/ecs/ErrorForDeleteTagsOutput.cpp
    src/model/ecs/ErrorForDetachKeyPairOutput.cpp
    src/model/ecs/ErrorForDisassociateInstancesIamRoleOutput.cpp
    src/model/ecs/ErrorForRebootInstancesOutput.cpp
    src/model/ecs/ErrorForStartInstancesOutput.cpp
    src/model/ecs/ErrorForStopInstancesOutput.cpp
    src/model/ecs/ErrorForUpdateSystemEventsOutput.cpp
    src/model/ecs/EventTypeForDescribeEventTypesOutput.cpp
    src/model/ecs/ExportImageRequest.cpp
    src/model/ecs/ExportImageResult.cpp
    src/model/ecs/GetConsoleOutputRequest.cpp
    src/model/ecs/GetConsoleOutputResult.cpp
    src/model/ecs/GetConsoleScreenshotRequest.cpp
    src/model/ecs/GetConsoleScreenshotResult.cpp
    src/model/ecs/GpuDeviceForDescribeInstanceTypesOutput.cpp
    src/model/ecs/GpuForDescribeInstanceTypesOutput.cpp
    src/model/ecs/GpuForDescribeSpotAdviceInput.cpp
    src/model/ecs/ImageForDescribeImagesOutput.cpp
    src/model/ecs/ImportImageRequest.cpp
    src/model/ecs/ImportImageResult.cpp
    src/model/ecs/ImportKeyPairRequest.cpp
    src/model/ecs/ImportKeyPairResult.cpp
    src/model/ecs/InstanceForDescribeInstancesOutput.cpp
    src/model/ecs/InstanceTypeFamilyForDescribeInstanceTypeFamiliesOutput.cpp
    src/model/ecs/InstanceTypeForDescribeInstanceTypesOutput.cpp
    src/model/ecs/InstancesIamRoleForDescribeInstancesIamRolesOutput.cpp
    src/model/ecs/KeyPairForDescribeKeyPairsOutput.cpp
    src/model/ecs/LocalVolumeForDescribeInstanceTypesOutput.cpp
    src/model/ecs/LocalVolumeForDescribeInstancesOutput.cpp
    src/model/ecs/MemoryForDescribeInstanceTypesOutput.cpp
    src/model/ecs/ModifyDeploymentSetAttributeRequest.cpp
    src/model/ecs/ModifyDeploymentSetAttributeResult.cpp
    src/model/ecs/ModifyImageAttributeRequest.cpp
    src/model/ecs/ModifyImageAttributeResult.cpp
    src/model/ecs/ModifyImageSharePermissionRequest.cpp
    src/model/ecs/ModifyImageSharePermissionResult.cpp
    src/model/ecs/ModifyInstanceAttributeRequest.cpp
    src/model/ecs/ModifyInstanceAttributeResult.cpp
    src/model/ecs/ModifyInstanceChargeTypeRequest.cpp
    src/model/ecs/ModifyInstanceChargeTypeResult.cpp
    src/model/ecs/ModifyInstanceDeploymentRequest.cpp
    src/model/ecs/ModifyInstanceDeploymentResult.cpp
    src/model/ecs/ModifyInstanceSpecRequest.cpp
    src/model/ecs/ModifyInstanceSpecResult.cpp
    src/model/ecs/ModifyKeyPairAttributeRequest.cpp
    src/model/ecs/ModifyKeyPairAttributeResult.cpp
    src/model/ecs/ModifySubscriptionEventTypesRequest.cpp
    src/model/ecs/ModifySubscriptionEventTypesResult.cpp
    src/model/ecs/NetworkForDescribeInstanceTypesOutput.cpp
    src/model/ecs/NetworkInterfaceForDescribeInstancesOutput.cpp
    src/model/ecs/NetworkInterfaceForRunInstancesInput.cpp
    src/model/ecs/OperationDetailForAssociateInstancesIamRoleOutput.cpp
    src/model/ecs/OperationDetailForAttachKeyPairOutput.cpp
    src/model/ecs/OperationDetailForCreateTagsOutput.cpp
    src/model/ecs/OperationDetailForDeleteImagesOutput.cpp
    src/model/ecs/OperationDetailForDeleteInstancesOutput.cpp
    src/model/ecs/OperationDetailForDeleteKeyPairsOutput.cpp
    src/model/ecs/OperationDetailForDeleteTagsOutput.cpp
    src/model/ecs/OperationDetailForDetachKeyPairOutput.cpp
    src/model/ecs/OperationDetailForDisassociateInstancesIamRoleOutput.cpp
    src/model/ecs/OperationDetailForRebootInstancesOutput.cpp
    src/model/ecs/OperationDetailForStartInstancesOutput.cpp
    src/model/ecs/OperationDetailForStopInstancesOutput.cpp
    src/model/ecs/OperationDetailForUpdateSystemEventsOutput.cpp
    src/model/ecs/ProcessorForDescribeInstanceTypesOutput.cpp
    src/model/ecs/RdmaForDescribeInstanceTypesOutput.cpp
    src/model/ecs/RebootInstanceRequest.cpp
    src/model/ecs/RebootInstanceResult.cpp
    src/model/ecs/RebootInstancesRequest.cpp
    src/model/ecs/RebootInstancesResult.cpp
    src/model/ecs/RenewInstanceRequest.cpp
    src/model/ecs/RenewInstanceResult.cpp
    src/model/ecs/ReplaceSystemVolumeRequest.cpp
    src/model/ecs/ReplaceSystemVolumeResult.cpp
    src/model/ecs/RunInstancesRequest.cpp
    src/model/ecs/RunInstancesResult.cpp
    src/model/ecs/StartInstanceRequest.cpp
    src/model/ecs/StartInstanceResult.cpp
    src/model/ecs/StartInstancesRequest.cpp
    src/model/ecs/StartInstancesResult.cpp
    src/model/ecs/StopInstanceRequest.cpp
    src/model/ecs/StopInstanceResult.cpp
    src/model/ecs/StopInstancesRequest.cpp
    src/model/ecs/StopInstancesResult.cpp
    src/model/ecs/SubscriptionForDescribeSubscriptionsOutput.cpp
    src/model/ecs/SupportedResourceForDescribeAvailableResourceOutput.cpp
    src/model/ecs/SystemEventForDescribeSystemEventsOutput.cpp
    src/model/ecs/TagFilterForDescribeImagesInput.cpp
    src/model/ecs/TagFilterForDescribeInstancesInput.cpp
    src/model/ecs/TagFilterForDescribeTagsInput.cpp
    src/model/ecs/TagForCreateImageInput.cpp
    src/model/ecs/TagForCreateTagsInput.cpp
    src/model/ecs/TagForDescribeImagesOutput.cpp
    src/model/ecs/TagForDescribeInstancesOutput.cpp
    src/model/ecs/TagForImportImageInput.cpp
    src/model/ecs/TagForRunInstancesInput.cpp
    src/model/ecs/TagResourceForDescribeTagsOutput.cpp
    src/model/ecs/TaskForDescribeTasksOutput.cpp
    src/model/ecs/UpdateSystemEventsRequest.cpp
    src/model/ecs/UpdateSystemEventsResult.cpp
    src/model/ecs/VolumeForDescribeInstanceTypesOutput.cpp
    src/model/ecs/VolumeForRunInstancesInput.cpp
    src/model/ecs/ZoneForDescribeZonesOutput.cpp
)

add_library(${PROJECT_NAME}
     STATIC ${VOLCENGINE_SDK_ECS_LIB}
     ${VOLCENGINE_SDK_ECS_HEADER}
     ${VOLCENGINE_SDK_ECS_HEADER_MODEL}
     )

set_target_properties(${PROJECT_NAME}
     PROPERTIES
     LINKER_LANGUAGE CXX
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
     OUTPUT_NAME ${PROJECT_NAME}
)

target_include_directories(${PROJECT_NAME}
     PRIVATE include
     ${CMAKE_SOURCE_DIR}/${TARGET_OUTPUT_NAME_PREFIX}core/include)

target_link_libraries(${PROJECT_NAME} ${TARGET_OUTPUT_NAME_PREFIX}core)

target_link_libraries(${PROJECT_NAME} ${CLIENT_SSL_LIBS})
target_link_libraries(${PROJECT_NAME} ${CLIENT_CURL_LIBS})


install(FILES ${VOLCENGINE_SDK_ECS_HEADER}
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/volcengine/ecs)
install(FILES  ${VOLCENGINE_SDK_ECS_HEADER_MODEL}
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/volcengine/ecs/model)
install(TARGETS ${PROJECT_NAME}
       ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
       LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
       RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)